fixed mobile selector overflow issue

--- a/mysite/assets/scss/modules/in-depth/_section.scss
+++ b/mysite/assets/scss/modules/in-depth/_section.scss
@@ -189,7 +189,8 @@
          background-position-x: 97%;
          margin-bottom: 0px;
          color: white;
-         padding: 0px 15px;
+         padding-top: 0px;
+         padding-bottom: 0px;
       }
       
    }
